<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Open Metro Maps</string>

    <string name="intro">This app used be about Berlin only.
        Now it starts to support multiple cities. We hope you enjoy
        this. Please select your desired city below.</string>

    <string name="berlin">Berlin</string>
    <string name="vienna">Vienna</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_swap_direction">Opposite direction</string>

    <string name="about">About</string>

    <string name="search">Search</string>

    <string name="schematic_map">Schematic map</string>
    <string name="geographic_map">Geographic map</string>
    <string name="lines">Lines</string>
    <string name="line">Line</string>
    <string name="stations">Stations</string>
    <string name="station">Station</string>
    <string name="stops">Stops</string>
    <string name="stop">Stop</string>

    <string name="show_on_map">%s map</string>
    <string name="show_on_google_map">Other map</string>

    <string name="map_not_installed">You do not have the %s map installed yet, but you can install it through Google Play.</string>
    <string name="map_not_new_enough">You have to update the %s map to the latest version before you can show stations on the map.</string>

    <string name="copyright" translatable="false">Copyright © 2026 Sebastian Kürten</string>
    <string name="about_info1">This app is intended to give you the opportunity to explore the public transportation network of a few cities such as Berlin and Vienna. The app is still kind of a prototype, but already provides some useful information.</string>
    <string name="about_info2">The information presented here is taken from the <a href="http://wiki.openstreetmap.org/">OpenStreetMap</a> project. The data is licensed under the <a href="http://opendatacommons.org/licenses/odbl/">Open Data Commons Open Database License (ODbL).</a></string>

    <string name="u_bahn" translatable="false">U-Bahn</string>
    <string name="s_bahn" translatable="false">S-Bahn</string>
    <string name="lines_other">Other</string>

</resources>
