<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonBerlin"
            style="@style/MainButtonStyle"
            android:text="@string/berlin"/>

        <Button
            android:id="@+id/buttonVienna"
            style="@style/MainButtonStyle"
            android:layout_below="@+id/buttonBerlin"
            android:text="@string/vienna"/>

        <Button
            android:id="@+id/buttonInfo"
            style="@style/MainButtonStyle"
            android:layout_below="@+id/buttonVienna"
            android:text="@string/about"/>

    </RelativeLayout>

</ScrollView>
