<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonNetworkMap"
            style="@style/MainButtonStyle"
            android:text="@string/network_map"/>

        <Button
            android:id="@+id/buttonLines"
            style="@style/MainButtonStyle"
            android:layout_below="@+id/buttonNetworkMap"
            android:text="@string/lines"/>

        <Button
            android:id="@+id/buttonStations"
            style="@style/MainButtonStyle"
            android:layout_below="@+id/buttonLines"
            android:text="@string/stations"/>

        <Button
            android:id="@+id/buttonInfo"
            style="@style/MainButtonStyle"
            android:layout_below="@+id/buttonStations"
            android:text="@string/about"/>

    </RelativeLayout>

</ScrollView>